<resources>
    <string name="app_name">Ketchup</string>
    <string name="your_profile">Your Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
    <string name="example_post_username">Philipp</string>
    <string name="search_hint">Search…</string>
    <string name="posts">Posts</string>
    <string name="logout">Logout</string>
    <string name="email">E-Mail</string>
    <string name="web_client_id">302086952551-jlds9ntce1q2tdl4k9pjiulssjb9nvvf.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Register a new account</string>
    <string name="login_with_existing_account">Login with an existing account</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="choose_image">Choose image</string>
    <string name="enter_post_text">Enter post text…</string>
    <string name="post">Post</string>
    <string name="error_invalid_file">The chosen image is invalid</string>
    <string name="username">Username</string>
    <string name="no_description">No Description</string>
    <string name="description">Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="no_changes_detected">You didn\'t change anything</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="liked_by_dialog_title">Liked by</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="comments">Comments</string>
    <string name="enter_your_message">enter your message</string>
    <string name="this_room_is_private_enter_code">This room is private . Enter code</string>
    <string name="code">code</string>
    <string name="join">join</string>
    <string name="ketchup">Ketchup</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="your_age">your age</string>
    <string name="next">next</string>
    <string name="mssg_left">mssg left</string>
    <string name="mssg_right">mssg right</string>
    <string name="users">users</string>
    <string name="messages">Messages</string>
    <string name="room_name">Room Name</string>
    <string name="room_description">Room Description</string>
    <string name="room_code">Room Code</string>
    <string name="create">create</string>
    <string name="create_a_room">create a room</string>
    <string name="privateroom">private</string>
    <string name="publicroom">public</string>
    <string name="enter_code_to_connect">Enter code to connect…</string>
    <string name="rooms">Rooms</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="change_username">change username</string>
    <string name="delete_my_room">delete my room</string>
    <string name="search_rooms">Search Rooms</string>
    <string name="update_profile_picture">update profile picture</string>
    <string name="update_username">update username</string>
    <string name="update">update</string>
    <string name="search_users">Search Users</string>
    <string name="friends">Friends</string>
    <string name="create_new_account">create new account</string>
    <string name="numberofkoin">0</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="active_10m_ago">active 10m ago</string>
    <string name="add_to_friend">+ add to friend</string>
    <string name="chatroom">chatRoom</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="privacy_policy">privacy policy</string>
</resources>