<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_my_profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/male"
        app:civ_border_color="#000"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_setting_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metro"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_my_profile_pic"
        app:layout_constraintVertical_bias="0.060000002" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_style_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_username" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting_username">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting_username">


            <TextView
                android:id="@+id/tv_setting_change_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderyellow"
                android:padding="10dp"
                android:text="@string/change_profile_picture"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_setting_change_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderyellow"
                android:padding="10dp"
                android:text="@string/change_username"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_setting_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderyellow"
                android:padding="10dp"
                android:text="@string/delete_my_room"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderyellow"
                android:padding="10dp"
                android:text="@string/logout"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderyellow"
                android:padding="10dp"
                android:text="@string/terms_and_condition"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/borderyellow"
                android:padding="10dp"
                android:text="@string/privacy_policy"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>