<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_main_room_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/splashicon"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_roomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metro"
        android:gravity="center"
        android:text="@string/room_name"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_room_image"
        app:layout_constraintVertical_bias="0.42000002" />


    <TextView
        android:id="@+id/tv_main_room_private_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metro"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/this_room_is_private_enter_code"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_roomName"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/border_search"
        android:digits="abcdefghijklmnopqrstuvwzyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:importantForAutofill="no"
        tools:Ignore="AutoFill"
        android:fontFamily="@font/metro"
        android:hint="@string/code"
        android:inputType="text"
        android:theme="@style/AppTheme"
        android:maxLines="1"
        android:visibility="gone"
        android:padding="13dp"
        android:textColor="#000"
        android:textColorHint="#927F7F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000"
        android:text="@string/join"
        android:fontFamily="@font/metro"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.120000005" />



</androidx.constraintlayout.widget.ConstraintLayout>