<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@null"
        android:src="@drawable/splashicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/materialCardView1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:padding="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">

         <TextView
             android:layout_width="match_parent"
             android:text="@string/terms_and_condition"
             android:textColor="#F50057"
             android:id="@+id/termsandconditions"
             android:textAlignment="center"
             android:layout_marginTop="4dp"
             android:layout_below="@+id/btnlogin"
             android:fontFamily="@font/metro"
             android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/etloginemail"
            android:hint="@string/email"
            android:importantForAutofill="no"
            tools:Ignore="AutoFill"
            android:textColor="#000"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/metro"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:padding="13dp"
            android:theme="@style/AppTheme"
            android:background="@drawable/border_search"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/etloginpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#000"
            android:theme="@style/AppTheme"
            android:importantForAutofill="no"
            tools:Ignore="AutoFill"
            android:hint="@string/password"
            android:fontFamily="@font/metro"
            android:layout_below="@+id/etloginemail"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:padding="13dp"
            android:background="@drawable/border_search"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>


            <Button
                android:layout_width="match_parent"
                android:id="@+id/btnlogin"
                android:layout_below="@+id/etloginpassword"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:text="@string/login"
                android:fontFamily="@font/metro"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="19sp"
                android:backgroundTint="#000"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_createnewaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="@font/metro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView1" />

    <ProgressBar
        android:id="@+id/loginprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="190dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="#000"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_createnewaccount"
        app:layout_constraintEnd_toEndOf="@+id/tv_createnewaccount"
        app:layout_constraintStart_toStartOf="@+id/tv_createnewaccount"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView1" />
</androidx.constraintlayout.widget.ConstraintLayout>